--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Starter to make Angular libs",
   "main": "bundle.js",
-  "jsnext:main": "lib.module.js",
-  "module": "lib.module.js",
+  "jsnext:main": "angular-web-cached-view.module.js",
+  "module": "angular-web-cached-view.module.js",
   "types": "index.d.ts",
   "scripts": {
     "test": "rimraf ./tmp/mocha-webpack && mocha-webpack --opts 'mocha.opts'",
@@ -30,6 +30,7 @@
     "@types/sinon": "^2.2.2",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
+    "chai": "^3.5.0",
     "core-js": "^2.4.1",
     "jsdom": "^10.1.0",
     "mocha": "^3.4.1",
@@ -38,6 +39,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "rxjs": "^5.4.0",
+    "sinon": "^2.2.0",
     "source-map-support": "^0.4.15",
     "typescript": "^2.3.2",
     "webpack": "^2.5.1",
