--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "angular-lib-starter",
+  "name": "@angularclass/web-cached-view",
   "version": "0.0.1",
-  "description": "Starter to make Angular libs",
+  "description": "",
   "main": "bundle.js",
   "jsnext:main": "angular-web-cached-view.module.js",
   "module": "angular-web-cached-view.module.js",
   "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AngularClass/angular-web-cached-view.git"
+  },
+  "author": "AngularClass",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/AngularClass/angular-web-cached-view/issues"
+  },
+  "homepage": "https://github.com/AngularClass/angular-web-cached-view#readme",
   "scripts": {
     "test": "rimraf ./tmp/mocha-webpack && mocha-webpack --opts 'mocha.opts'",
     "build:esm": "ntsc -p tsconfig.esm.json",
@@ -15,7 +25,6 @@
     "copy": "cp package.json dist && cp README.md dist",
     "release": "npm run build && npm run copy"
   },
-  "license": "MIT",
   "devDependencies": {
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
